src/Parser/c_srcParser.py
# Generated from c_src.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class c_srcParser ( Parser ):

    grammarFileName = "c_src.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'#include'", "'<'", "'>'", "'{'", "'}'", 
                     "';'", "','", "'('", "')'", "'='", "'['", "']'", "'for'", 
                     "'if'", "'else'", "'while'", "'return'", "'!'", "'*'", 
                     "'/'", "'%'", "'+'", "'-'", "'=='", "'!='", "'<='", 
                     "'>='", "'struct'", "'.'", "'void'", "'string'", "'int'", 
                     "'char'", "'double'", "'scanf'", "'&'", "'gets'", "'atoi'", 
                     "'printf'", "'strlen'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "VAR", "INT", "DOUBLE", "CHAR", "STRING", 
                      "LIB", "Logical", "Operator", "LineComment", "BlockComment", 
                      "WS" ]

    RULE_prog = 0
    RULE_include = 1
    RULE_initSentence = 2
    RULE_defSentence = 3
    RULE_structDef = 4
    RULE_structParams = 5
    RULE_sParam = 6
    RULE_funcDef = 7
    RULE_params = 8
    RULE_param = 9
    RULE_funcBody = 10
    RULE_mainBody = 11
    RULE_block = 12
    RULE_normalInit = 13
    RULE_arrayInit = 14
    RULE_structInit = 15
    RULE_assignSentence = 16
    RULE_forBlock = 17
    RULE_firstBlock = 18
    RULE_secondBlock = 19
    RULE_ifBlocks = 20
    RULE_ifBlock = 21
    RULE_elifBlock = 22
    RULE_elseBlock = 23
    RULE_condition = 24
    RULE_whileBlock = 25
    RULE_returnSentence = 26
    RULE_expression = 27
    RULE_structItem = 28
    RULE_arrayName = 29
    RULE_structMember = 30
    RULE_voidType = 31
    RULE_typeName = 32
    RULE_arrayItem = 33
    RULE_func = 34
    RULE_scanfFunc = 35
    RULE_getsFunc = 36
    RULE_atoiFunc = 37
    RULE_printfFunc = 38
    RULE_selfDefinedFunc = 39
    RULE_strlenFunc = 40
    RULE_varName = 41
    RULE_intType = 42
    RULE_doubleType = 43
    RULE_charType = 44
    RULE_stringType = 45
    RULE_libName = 46

    ruleNames =  [ "prog", "include", "initSentence", "defSentence", "structDef", 
                   "structParams", "sParam", "funcDef", "params", "param", 
                   "funcBody", "mainBody", "block", "normalInit", "arrayInit", 
                   "structInit", "assignSentence", "forBlock", "firstBlock", 
                   "secondBlock", "ifBlocks", "ifBlock", "elifBlock", "elseBlock", 
                   "condition", "whileBlock", "returnSentence", "expression", 
                   "structItem", "arrayName", "structMember", "voidType", 
                   "typeName", "arrayItem", "func", "scanfFunc", "getsFunc", 
                   "atoiFunc", "printfFunc", "selfDefinedFunc", "strlenFunc", 
                   "varName", "intType", "doubleType", "charType", "stringType", 
                   "libName" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    VAR=41
    INT=42
    DOUBLE=43
    CHAR=44
    STRING=45
    LIB=46
    Logical=47
    Operator=48
    LineComment=49
    BlockComment=50
    WS=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def include(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(c_srcParser.IncludeContext)
            else:
                return self.getTypedRuleContext(c_srcParser.IncludeContext,i)


        def initSentence(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(c_srcParser.InitSentenceContext)
            else:
                return self.getTypedRuleContext(c_srcParser.InitSentenceContext,i)


        def defSentence(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(c_srcParser.DefSentenceContext)
            else:
                return self.getTypedRuleContext(c_srcParser.DefSentenceContext,i)


        def getRuleIndex(self):
            return c_srcParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = c_srcParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 94
                self.include()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 33554432000) != 0):
                self.state = 102
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 100
                    self.initSentence()
                    pass

                elif la_ == 2:
                    self.state = 101
                    self.defSentence()
                    pass


                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def libName(self):
            return self.getTypedRuleContext(c_srcParser.LibNameContext,0)


        def getRuleIndex(self):
            return c_srcParser.RULE_include

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInclude" ):
                listener.enterInclude(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInclude" ):
                listener.exitInclude(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInclude" ):
                return visitor.visitInclude(self)
            else:
                return visitor.visitChildren(self)




    def include(self):

        localctx = c_srcParser.IncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_include)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(c_srcParser.T__0)
            self.state = 108
            self.match(c_srcParser.T__1)
            self.state = 109
            self.libName()
            self.state = 110
            self.match(c_srcParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitSentenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def normalInit(self):
            return self.getTypedRuleContext(c_srcParser.NormalInitContext,0)


        def arrayInit(self):
            return self.getTypedRuleContext(c_srcParser.ArrayInitContext,0)


        def structInit(self):
            return self.getTypedRuleContext(c_srcParser.StructInitContext,0)


        def getRuleIndex(self):
            return c_srcParser.RULE_initSentence

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitSentence" ):
                listener.enterInitSentence(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitSentence" ):
                listener.exitInitSentence(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitSentence" ):
                return visitor.visitInitSentence(self)
            else:
                return visitor.visitChildren(self)




    def initSentence(self):

        localctx = c_srcParser.InitSentenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_initSentence)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 112
                self.normalInit()
                pass

            elif la_ == 2:
                self.state = 113
                self.arrayInit()
                pass

            elif la_ == 3:
                self.state = 114
                self.structInit()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefSentenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcDef(self):
            return self.getTypedRuleContext(c_srcParser.FuncDefContext,0)


        def structDef(self):
            return self.getTypedRuleContext(c_srcParser.StructDefContext,0)


        def getRuleIndex(self):
            return c_srcParser.RULE_defSentence

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefSentence" ):
                listener.enterDefSentence(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefSentence" ):
                listener.exitDefSentence(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefSentence" ):
                return visitor.visitDefSentence(self)
            else:
                return visitor.visitChildren(self)




    def defSentence(self):

        localctx = c_srcParser.DefSentenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_defSentence)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 117
                self.funcDef()
                pass

            elif la_ == 2:
                self.state = 118
                self.structDef()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def structItem(self):
            return self.getTypedRuleContext(c_srcParser.StructItemContext,0)


        def structParams(self):
            return self.getTypedRuleContext(c_srcParser.StructParamsContext,0)


        def getRuleIndex(self):
            return c_srcParser.RULE_structDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructDef" ):
                listener.enterStructDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructDef" ):
                listener.exitStructDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructDef" ):
                return visitor.visitStructDef(self)
            else:
                return visitor.visitChildren(self)




    def structDef(self):

        localctx = c_srcParser.StructDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_structDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.structItem()
            self.state = 122
            self.match(c_srcParser.T__3)
            self.state = 123
            self.structParams()
            self.state = 124
            self.match(c_srcParser.T__4)
            self.state = 125
            self.match(c_srcParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sParam(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(c_srcParser.SParamContext)
            else:
                return self.getTypedRuleContext(c_srcParser.SParamContext,i)


        def getRuleIndex(self):
            return c_srcParser.RULE_structParams

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructParams" ):
                listener.enterStructParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructParams" ):
                listener.exitStructParams(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructParams" ):
                return visitor.visitStructParams(self)
            else:
                return visitor.visitChildren(self)




    def structParams(self):

        localctx = c_srcParser.StructParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_structParams)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 127
                self.sParam()
                self.state = 130 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 32480690176) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeName(self):
            return self.getTypedRuleContext(c_srcParser.TypeNameContext,0)


        def structItem(self):
            return self.getTypedRuleContext(c_srcParser.StructItemContext,0)


        def varName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(c_srcParser.VarNameContext)
            else:
                return self.getTypedRuleContext(c_srcParser.VarNameContext,i)


        def arrayName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(c_srcParser.ArrayNameContext)
            else:
                return self.getTypedRuleContext(c_srcParser.ArrayNameContext,i)


        def getRuleIndex(self):
            return c_srcParser.RULE_sParam

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSParam" ):
                listener.enterSParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSParam" ):
                listener.exitSParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSParam" ):
                return visitor.visitSParam(self)
            else:
                return visitor.visitChildren(self)




    def sParam(self):

        localctx = c_srcParser.SParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_sParam)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [31, 32, 33, 34]:
                self.state = 132
                self.typeName()
                pass
            elif token in [28]:
                self.state = 133
                self.structItem()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 136
                self.varName()
                pass

            elif la_ == 2:
                self.state = 137
                self.arrayName()
                pass


            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 140
                self.match(c_srcParser.T__6)
                self.state = 143
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 141
                    self.varName()
                    pass

                elif la_ == 2:
                    self.state = 142
                    self.arrayName()
                    pass


                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 150
            self.match(c_srcParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varName(self):
            return self.getTypedRuleContext(c_srcParser.VarNameContext,0)


        def params(self):
            return self.getTypedRuleContext(c_srcParser.ParamsContext,0)


        def funcBody(self):
            return self.getTypedRuleContext(c_srcParser.FuncBodyContext,0)


        def typeName(self):
            return self.getTypedRuleContext(c_srcParser.TypeNameContext,0)


        def voidType(self):
            return self.getTypedRuleContext(c_srcParser.VoidTypeContext,0)


        def structItem(self):
            return self.getTypedRuleContext(c_srcParser.StructItemContext,0)


        def getRuleIndex(self):
            return c_srcParser.RULE_funcDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDef" ):
                listener.enterFuncDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDef" ):
                listener.exitFuncDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDef" ):
                return visitor.visitFuncDef(self)
            else:
                return visitor.visitChildren(self)




    def funcDef(self):

        localctx = c_srcParser.FuncDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_funcDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [31, 32, 33, 34]:
                self.state = 152
                self.typeName()
                pass
            elif token in [30]:
                self.state = 153
                self.voidType()
                pass
            elif token in [28]:
                self.state = 154
                self.structItem()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 157
            self.varName()
            self.state = 158
            self.match(c_srcParser.T__7)
            self.state = 159
            self.params()
            self.state = 160
            self.match(c_srcParser.T__8)
            self.state = 161
            self.match(c_srcParser.T__3)
            self.state = 162
            self.funcBody()
            self.state = 163
            self.match(c_srcParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(c_srcParser.ParamContext)
            else:
                return self.getTypedRuleContext(c_srcParser.ParamContext,i)


        def getRuleIndex(self):
            return c_srcParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = c_srcParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.state = 174
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [31, 32, 33, 34]:
                self.enterOuterAlt(localctx, 1)
                self.state = 165
                self.param()
                self.state = 170
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==7:
                    self.state = 166
                    self.match(c_srcParser.T__6)
                    self.state = 167
                    self.param()
                    self.state = 172
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeName(self):
            return self.getTypedRuleContext(c_srcParser.TypeNameContext,0)


        def varName(self):
            return self.getTypedRuleContext(c_srcParser.VarNameContext,0)


        def getRuleIndex(self):
            return c_srcParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = c_srcParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.typeName()
            self.state = 177
            self.varName()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mainBody(self):
            return self.getTypedRuleContext(c_srcParser.MainBodyContext,0)


        def returnSentence(self):
            return self.getTypedRuleContext(c_srcParser.ReturnSentenceContext,0)


        def getRuleIndex(self):
            return c_srcParser.RULE_funcBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncBody" ):
                listener.enterFuncBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncBody" ):
                listener.exitFuncBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncBody" ):
                return visitor.visitFuncBody(self)
            else:
                return visitor.visitChildren(self)




    def funcBody(self):

        localctx = c_srcParser.FuncBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_funcBody)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self.mainBody()
            self.state = 180
            self.returnSentence()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(c_srcParser.BlockContext)
            else:
                return self.getTypedRuleContext(c_srcParser.BlockContext,i)


        def func(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(c_srcParser.FuncContext)
            else:
                return self.getTypedRuleContext(c_srcParser.FuncContext,i)


        def getRuleIndex(self):
            return c_srcParser.RULE_mainBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainBody" ):
                listener.enterMainBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainBody" ):
                listener.exitMainBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMainBody" ):
                return visitor.visitMainBody(self)
            else:
                return visitor.visitChildren(self)




    def mainBody(self):

        localctx = c_srcParser.MainBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_mainBody)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 188
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 186
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
                    if la_ == 1:
                        self.state = 182
                        self.block()
                        pass

                    elif la_ == 2:
                        self.state = 183
                        self.func()
                        self.state = 184
                        self.match(c_srcParser.T__5)
                        pass

             
                self.state = 190
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def initSentence(self):
            return self.getTypedRuleContext(c_srcParser.InitSentenceContext,0)


        def assignSentence(self):
            return self.getTypedRuleContext(c_srcParser.AssignSentenceContext,0)


        def forBlock(self):
            return self.getTypedRuleContext(c_srcParser.ForBlockContext,0)


        def whileBlock(self):
            return self.getTypedRuleContext(c_srcParser.WhileBlockContext,0)


        def ifBlocks(self):
            return self.getTypedRuleContext(c_srcParser.IfBlocksContext,0)


        def returnSentence(self):
            return self.getTypedRuleContext(c_srcParser.ReturnSentenceContext,0)


        def getRuleIndex(self):
            return c_srcParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = c_srcParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_block)
        try:
            self.state = 197
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [28, 31, 32, 33, 34]:
                self.enterOuterAlt(localctx, 1)
                self.state = 191
                self.initSentence()
                pass
            elif token in [41]:
                self.enterOuterAlt(localctx, 2)
                self.state = 192
                self.assignSentence()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 3)
                self.state = 193
